<resources>
    <string name="app_name">Nasa Material</string>
    <string name="default_hint">Поиск в википедии</string>
    <string name="default_text">что такое Android</string>
    <string name="standart_text">Дефолтная</string>
    <string name="exotics_durability_text">Экзотика и прочность</string>
    <string name="sea_wave_text">Морская волна</string>
    <string name="choice_theme">Выбор темы:</string>
    <string name="default_chips_text">Default</string>
    <string name="entry_chips_text">Entry</string>
    <string name="choice_chips_text">Choice</string>
    <string name="filter_chips_text">Filter</string>
    <string name="background_chips_text">Background</string>
    <string name="ripple_chips_text">Ripple</string>
    <string name="icon_chips_text">Icon</string>
    <string name="choose_one_text">Выбрать одну</string>
    <string name="choice_one">Первый</string>
    <string name="choice_two">Второй</string>
    <string name="choice_three">Третий</string>
    <string name="noname_text">Безымянный чипс</string>
    <string name="click_here">Для отображения Чипсов нажмите сюда</string>
    <string name="clouds_hills_trees">Облака холмы деревья пейзаж</string>
    <string name="item_view_header">Заметка</string>
    <string name="item_view_body">Инфо</string>
    <string name="item_edit_header">Писать тут</string>
    <string name="item_header_text">Заголовок</string>
    <string name="big_text">Был прекрасный июльский день,\nодин из тех дней,\nкоторые случаются только тогда,
        когда погода установилась надолго. С самого раннего утра небо ясно; утренняя заря не пылает пожаром:
        \nона разливается кротким румянцем.\nСолнце — не огнистое, не раскаленное, как во время знойной засухи, не
        тускло-багровое, как перед бурей, но светлое и приветно лучезарное — мирно всплывает под узкой и длинной тучкой,
        свежо просияет и погрузится в лиловый ее туман. Верхний, тонкий край растянутого облачка засверкает змейками;
        блеск их подобен блеску кованого серебра. Но вот опять хлынули играющие лучи, — и весело и величаво, словно взлетая,
        поднимается могучее светило. Около полудня обыкновенно появляется множество круглых высоких облаков, золотисто-серых,
        с нежными белыми краями. Подобно островам, разбросанным по бесконечно разлившейся реке, обтекающей их глубоко прозрачными
        рукавами ровной синевы, они почти не трогаются с места; далее, к небосклону, они сдвигаются, теснятся, синевы между ними уже
        не видать; но сами они так же лазурны, как небо:\nони все насквозь проникнуты светом и теплотой.\nЦвет небосклона,
        легкий, бледно-лиловый, не изменяется во весь день и кругом одинаков; нигде не темнеет, не густеет гроза; разве кое-где
        протянутся сверху вниз голубоватые полосы: то сеется едва заметный дождь. К вечеру эти облака исчезают; последние из них,
        черноватые и неопределенные, как дым, ложатся розовыми клубами напротив заходящего солнца; на месте, где оно закатилось так
        же спокойно, как спокойно взошло на небо, алое сиянье стоит недолгое время над потемневшей землей, и, тихо мигая, как бережно
        несомая свечка, затеплится на нем вечерняя звезда. В такие дни краски все смягчены; светлы, но не ярки; на всем лежит печать
        какой-то трогательной кротости. В такие дни жар бывает иногда весьма силен, иногда даже «парит» по скатам полей;
        но ветер разгоняет, раздвигает накопившийся зной, и вихри-круговороты — несомненный признак постоянной погоды —
        высокими белыми столбами гуляют по дорогам через пашню. В сухом и чистом воздухе пахнет полынью, сжатой рожью, гречихой;
        даже за час до ночи вы не чувствуете сырости. Подобной погоды желает земледелец для уборки хлеба.</string>
</resources>