<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    app:layoutDescription="@xml/motion_scene">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_chips_text"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chip_entry"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_entry"
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_chips_text"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chip_choice"
        app:layout_constraintStart_toEndOf="@+id/chip_default" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_choice"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_chips_text"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chip_filter"
        app:layout_constraintStart_toEndOf="@+id/chip_entry" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_filter"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_chips_text"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chip_choice" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_chips_text"
        app:chipBackgroundColor="@color/sea_foam"
        app:layout_constraintEnd_toStartOf="@id/chip_ripple"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_default" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_ripple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ripple_chips_text"
        app:layout_constraintEnd_toStartOf="@id/chip_icon"
        app:layout_constraintStart_toEndOf="@id/chip_background"
        app:layout_constraintTop_toBottomOf="@+id/chip_default"
        app:rippleColor="@color/teal_200" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_chips_text"
        app:chipIcon="@drawable/ic_baseline_block_24"
        app:iconStartPadding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chip_ripple"
        app:layout_constraintTop_toBottomOf="@+id/chip_default" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/choose_one_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_one_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_background" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_one_text_view">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_one" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_two" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_three" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/material_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_default_theme"
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standart_text"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_text_view" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/hide_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="chip_exotics_durability_theme,chip_sea_wave_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_default_theme" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_exotics_durability_theme"
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exotics_durability_text"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_default_theme" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_sea_wave_theme"
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sea_wave_text"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_exotics_durability_theme" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="chip_default_theme,chip_exotics_durability_theme,chip_sea_wave_theme" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_noname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noname_text"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_big"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:scrollbars="vertical"
        android:text="@string/big_text"
        app:layout_constraintBottom_toTopOf="@+id/text_click"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_sea_wave_theme" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/click_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>